feat: :hammer: Working on html and css

--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -7,11 +7,21 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <main>
-        <img src="./media/pokedex.png" alt="">
-    </main>
-    <div>
+    <div class="imagenfondo">
+        <img class="big" src="./media/pokedex.png" alt="">
     </div>
+    <div id="data" class="data">
+        <h1 id="idPoke" class="idPoke">num - </h1>
+        <h1 id="nomPoke" class="nomPoke"> nombre</h1>
+    </div>
+    <div id="input" class="input">
+        <input class="cuadro" type="text" placeholder="Name or Number"> 
+    </div>
+    <div id="buttons" class="buttons">
+        <button id="prevB" class="prevB"></button>
+        <button id="nextB" class="nextB"></button>
+    </div>
+
 </body>
 <script src="./scripts/script.js"></script>
 </html>
