feat: :chart_with_upwards_trend: Adding important info

--- a/Dia5/index.html
+++ b/Dia5/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>APIS</title>
+    <title>Sencillo</title>
 </head>
-<body onload="JSONRequest()">
-    <div id="output"></div>
-    <strong>Caracters: <span id="output"></span></strong>
+<body>
+    
 </body>
-<script src="./script.js"></script>
+<script src="./script/script.js"></script>
 </html>
