feat: :sparkles: Finishing CSS and HTML

--- a/Cartas/pages/howto.html
+++ b/Cartas/pages/howto.html
@@ -3,23 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>READY?</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <title>SET</title>
+    <link rel="stylesheet" href="../styles/howto.css">
 </head>
 <body>
     <div id="main" class="main">
         <div id="titulo" class="titulo">
             <h1>MAYOR O MENOR</h1>
         </div>
+        <p class="rules">Se va a mostrar una carta, tiene que adivinar si la siguiente carta va a ser mayor o menor. <br> Tiene 10 oportunidades para alcanzar el mayor puntaje posible <br> <br> ¡SUERTE!</p>
         <div id="cont" class="cont">
-            <a class="iniciar" href="./pages/game.html">INICIAR</a>
+            <a class="iniciar" href="./game.html">INICIAR</a>
             <h2 class="textstart">¡Haga click para comenzar! </h2>
-            <a href="./pages/howto.html" class="how">Como se juega</a>
             
         </div>
-
-        <img class="cartas" src="./media/cardsR.png" alt="">
-    </div>
 </body>
 <script src="./scripts/script.js"></script>
 </html>
