feat: :art: Finishing little details

--- a/Cartas/index.html
+++ b/Cartas/index.html
@@ -12,13 +12,16 @@
             <h1>MAYOR O MENOR</h1>
         </div>
         <div id="cont" class="cont">
-            <a class="iniciar" href="./pages/game.html">INICIAR</a>
+            <div>
+                <a class="iniciar" href="./pages/game.html">INICIAR</a>
+            </div>
             <h2 class="textstart">¡Haga click para comenzar! </h2>
-            <a href="./pages/howto.html" class="how">Como se juega</a>
+            <a href="./pages/howto.html" class="how">¿Cómo se juega?</a>
             
         </div>
 
-        <img class="cartas" src="./media/cardsR.png" alt="">
+        <img class="cartas" src="./media/spread.gif" alt="">
+        <img class="monedas" src="./media/coins.gif" alt="">
     </div>
 </body>
 <script src="./scripts/script.js"></script>
