feat:  :hammer: Developing scripts

--- a/Cartas/index.html
+++ b/Cartas/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <img class="cartas" src="./media/spread.gif" alt="">
-        <img class="monedas" src="./media/coins.gif" alt="">
+        <!--<img class="monedas" src="./media/coins.gif" alt=""> -->
     </div>
 </body>
 <script src="./scripts/script.js"></script>
