--- a/Cartas/pages/game.html
+++ b/Cartas/pages/game.html
@@ -13,7 +13,7 @@
                 <h1>Mayor o Menor</h1>
             </div>
 
-            <div id="cards" class="cards">
+            <div id="card" class="card">
 
                 carta
 
@@ -24,10 +24,10 @@
                 <h3>¿Será mayor o menor?</h3>
             </div>
 
-            <div id="score" class="score">
-
-                score
-
+            <div id="status" class="status">
+                <div id="score" class="score"></div>
+                <div id="chances" class="chances"></div>
+                <div id="topScore" class="topScore"></div>
             </div>
         </div>
     
