feat: :hammer: Working on script, showing card accomplished

--- a/Cartas/pages/game.html
+++ b/Cartas/pages/game.html
@@ -15,8 +15,6 @@
 
             <div id="card" class="card">
 
-                carta
-
             </div>
 
             <div id="drill" class="drill">
@@ -32,4 +30,5 @@
         </div>
     
 </body>
+<script src="../scripts/script.js"></script>
 </html>
