feat: :hammer: Adding functions

--- a/Cartas/pages/game.html
+++ b/Cartas/pages/game.html
@@ -13,14 +13,14 @@
                 <h1>Mayor o Menor</h1>
             </div>
 
-            <div id="card" class="card">
-
-            </div>
+            <div id="card" class="card"></div>
 
             <div id="drill" class="drill">
                 <h2>La siguiente carta </h2>
                 <h3>¿Será mayor o menor?</h3>
             </div>
+
+            <div id="mayormenor" class="mayormenor"> mayor o menor</div>
 
             <div id="status" class="status">
                 <div id="score" class="score"></div>
