--- a/Dia9+4/index.html
+++ b/Dia9+4/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <h1>SuperHeroes and Villians data from all universes</h1>
-    <input type="text" id="nombreInput" placeholder="Ingresa un nombre...">
+    <input type="text" id="nombreInput" placeholder="Enter a name...">
     <button onclick="buscarPersonaje()">Buscar</button>
 
     <div id="resultados" class="resultado">
