feat: :sparkles: Updating Day 16th

--- a/Dia16/index.html
+++ b/Dia16/index.html
@@ -9,36 +9,40 @@
 <body>
     <article class="todito">
 
+
+
         <h1>Just do it.</h1>
         <div class="boton">
-            <input type="text" placeholder="Add a task." id="taskInput">
+            <input type="text" placeholder="Add a task." id="taskInput"></input>
             <button id="addTaskButton">I Got This!</button>
         </div>
-
     </article>
-
+    
     <article class="opciones">
         <div class="capsula">
             <div class="infoText">
-                <p>Wenas</p>
+                <p>Ejemplo 1</p>
             </div>
-            <div class="terminado">
-                <img src="./media/img/pngwing.com (2).png" alt="">
-            </div>
-            <div class="eliminado">
-                <img src="./media/img/pngwing.com (4).png" alt="">
+            <div class="botones">
+                <div class="terminado">
+                    <img src="../Dia16/media/img/pngwing.com (2).png" alt="">
+                </div>
+                <div class="eliminado">
+                    <img src="../Dia16/media/img/pngwing.com (4).png" alt="">
+                </div>
             </div>
         </div>
-
         <div class="capsulaNegativa">
-            <div class="infoTextN">
-                <p>Wenas</p>
+            <div class="infoTextNegativo">
+                <p>Ejemplo 2</p>
             </div>
-            <div class="terminadoN">
-                <img src="./media/img/pngwing.com (2).png" alt="">
-            </div>
-            <div class="eliminadoN">
-                <img src="./media/img/pngwing.com (4).png" alt="">
+            <div class="botones">
+                <div class="terminadoNegativo">
+                    <img src="../Dia16/media/img/pngwing.com (2).png" alt="">
+                </div>
+                <div class="eliminadoNegativo">
+                    <img src="../Dia16/media/img/pngwing.com (4).png" alt="">
+                </div>
             </div>
         </div>
 
